--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8"/>
-  <title>Ionic App  -- button --</title>
+  <title>Ionic App WS COMM</title>
 
   <base href="/"/>
 
